--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto&display=swap');
+
+
+
+
+:root{
+    --primary-color:#026467;
+    --secondary-color:#e5f5ea;
+    --body-text-color:#596392;
+    --navbar-footer-color:#f9f9f9;
+}
+
+body{
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    
+    color: var(--body-text-color);
+}
+.bg-theme{
+    background-color: var(--secondary-color);
+}
